Downgare to java 1.8